# Qmachine

./: README
include/qmachine/: qmachine.h
src/: CMakeLists.txt  assparse.c  hashtable.c  in_assparse.h  in_hashtable.h  in_instr.h  in_machine.h  in_memory.h  in_miscell.h  instruction.c  machine.c  memory.c  miscellaneous.c
test/: CMakeLists.txt  hash_test.c  parse_test.c  qm.ass
