
IF(COMMAND cmake_policy)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF()

PROJECT(Qmachine)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

AUX_SOURCE_DIRECTORY(. LOCAL_SRCS)
INCLUDE_DIRECTORIES(../include)

IF(UNIX)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ENDIF(UNIX)

SET(QMACHINE_LIB "qmachine")
IF(${BUILD_STATIC} STREQUAL yes)
	ADD_LIBRARY(${QMACHINE_LIB} STATIC ${LOCAL_SRCS})
ELSE()
	ADD_LIBRARY(${QMACHINE_LIB} SHARED ${LOCAL_SRCS})
ENDIF()

INSTALL(TARGETS ${QMACHINE_LIB}
		RUNTIME DESTINATION bin
		LIBRARY DESTINATION lib
		ARCHIVE DESTINATION lib
)

INSTALL(
	DIRECTORY ../include/
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    DIRECTORY_PERMISSIONS PATTERN ".svn" EXCLUDE) 